<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".secondActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="200dp"
    android:layout_centerVertical="true">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:id="@+id/photo"
        android:src="@drawable/ic_image"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
       android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/place_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/placeName"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/place_adress"
            android:textSize="16sp"
            android:textStyle="italic"
            android:layout_marginTop="10dp"
            android:text="@string/placeAdress"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/place_open_hour"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:text="@string/openhour"/>
        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ratingBar"
            android:layout_marginTop="10dp"
            android:max="5"/>
        <Button
            android:layout_width="300dp"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_show_map"
            android:text="@string/showmap"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@drawable/custom_button"/>
        <Button
            android:layout_width="300dp"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_show_direction"
            android:text="@string/btnshowd"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@drawable/custom_button"
            android:backgroundTint="@color/purple_700"/>

    </LinearLayout>

</LinearLayout>
</RelativeLayout>