<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SplashScreen"
    android:backgroundTint="@color/white">
    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:lottie_autoPlay="true"
        android:background="@color/white"
        app:lottie_cacheComposition="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/restaurant"
        app:lottie_speed="1"
        android:layout_marginTop="70dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/second_name"
        android:textColor="#0B0B59"
        android:textSize="25sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="5dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/slogan"
        android:textColor="#0CA177"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textStyle="normal"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
      android:layout_gravity="center"
        android:backgroundTint="@color/white">
        <Button
            android:id="@+id/buttonLang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/button1"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            android:padding="20dp"
            android:background="@drawable/custom_button"
            android:gravity="center"/>

        <Button
            android:id="@+id/btn_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/button3"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
           android:padding="20dp"
            android:background="@drawable/custom_button"
            android:gravity="center"/>
    </LinearLayout>






</LinearLayout>